FIX:grid overflow

--- a/Assest/project.css
+++ b/Assest/project.css
@@ -1,8 +1,8 @@
 
 .project-contain{
     display: grid;
-    grid-template-columns: 30vw 30vw 30vw;
-    grid-template-rows: 33vw 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 2fr 50px;
     gap: 20px;
     background-color: white;
     margin-left: 15px;
