--- a/Assest/style.css
+++ b/Assest/style.css
@@ -8,6 +8,7 @@
 .main{
     margin-top: 5vw;
     background-color: #d3d2d2be;
+    margin-right: 0px;
 }
 
 /* navbar */
